@startuml poker
skinparam ClassBackgroundColor white
skinparam classAttributeIconSize 0
show circle

class Deck {
# cardList: List<Card>
+ Deck()
+ getCard(): Card
}

class Card {
- suite: Suite
- value: Value
+ Card(Suite suite, Value value)
+ greater(Card card): boolean
+ getValue(): Value
+ getSuite(): Suite
+ toString(): String
}

enum GambleType {
CARTA_ALTA
PAREJA
DOBLE_PAREJA
TRIO
ESCALERA
COLOR
FULL
POQUER
ESCALERA_COLOR
ESCALERA_REAL
+ equals(GambleType gambleType): boolean
+ greater(GambleType gambleType): boolean
}

class Player {
- cardList: List<Card>
- gamble: Gamble
+ Player()
+ add(Card card)
+ whoIsWinner(Player player): Player
+ toString(): String
- getGamble(): Gamble
}

enum Suite {
CORAZONES
DIAMANTES
PICAS
TREBOLES
- title: String
- Suite(String title)
- next(): Suite
+ getTitle(): String
+ next(int amount): Suite
}

enum Value{
DOS
TRES
CUATRO
CINCO
SEIS
SIETE
OCHO
NUEVE
DIEZ
INFANTE
REINA
REY
AS
- title: String
- Value(String title)
+ getTitle(): String
+ greater(Value value): boolean
+ next(int amount): Value
- next(): Value
}

class Gamble {
# gambleType: GambleType
- orderedValues: List<Value>
+ Gamble(GambleType gambleType, List<Value> orderedValues)
+ whoIsWinner(Gamble gamble): Gamble
- whoIsWinnerWithSameGambleType(Gamble gamble): Gamble
+ toString(): String
}

class PlayerStatistics {
- valuesCont: int[]
- suitesCont: int[]
+ PlayerStatistics(List<Card> cardList)
+ getMaxValue(): Value
+ hasSameValue(int amount): boolean
+ hasSameColor(int amount): boolean
+ hasTwoPairs(): boolean
+ getOrderedValues(int amount): List<Value>
+ getOrderedValues(): List<Value>
+ hasStairStart(Value value): boolean
+ hasStair(): boolean
}

package analyzers {
    abstract Analyzer {
        # nextAnalyzer: Analyzer
        + Analyzer(Analyzer nextAnalyzer)
        {abstract} + getGamble(PlayerStatistics playerStatistics): Gamble
    }

    class GambleAnalyzer {
        - dobleParejaAnalyzer: DobleParejaAnalyzer
        - parejaAnalyzer: ParejaAnalyzer
        - cartaAltaAnalyzer: CartaAltaAnalyzer
	    + GambleAnalyzer()
        + getGamble(PlayerStatistics playerStatistics): Gamble
    }

    class CartaAltaAnalyzer {
        + CartaAltaAnalyzer()
        + CartaAltaAnalyzer(Analyzer analyzer)
        + getGamble(PlayerStatistics playerStatistics): Gamble
    }
    class ParejaAnalyzer {
        + ParejaAnalyzer(Analyzer analyzer)
        + getGamble(PlayerStatistics playerStatistics): Gamble
    }
    class DobleParejaAnalyzer {
        + DobleParejaAnalyzer(Analyzer analyzer)
        + getGamble(PlayerStatistics playerStatistics): Gamble
    }
}

Deck *-d- "*" Card

Player *-d- "*" Card
Player *-d--- GambleAnalyzer
Player -r---> Gamble
Player *-d--- PlayerStatistics

PlayerStatistics -d-> "*" Card
PlayerStatistics *-d- "*" Value

Gamble -d-> GambleType
Gamble -d-> "*" Value

Card -d-> Value
Card -d-> Suite

GambleAnalyzer *-d-> Analyzer
GambleAnalyzer -d-> Gamble
GambleAnalyzer -d-> PlayerStatistics

Analyzer <|-down- ParejaAnalyzer
Analyzer <|-down- DobleParejaAnalyzer
Analyzer <|-down- CartaAltaAnalyzer

Analyzer -r-> Gamble
Analyzer -r-> PlayerStatistics

CartaAltaAnalyzer -d-> GambleType

DobleParejaAnalyzer -d-> GambleType
DobleParejaAnalyzer -d-> "*" Value

ParejaAnalyzer -d-> GambleType
ParejaAnalyzer -d-> "*" Value

@enduml